force-app/main/default/src/objects/DataUsePurpose/DataUsePurpose.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>