force-app/main/default/src/objects/DataUsePurpose/fields/MVN_Effective_Months_MD__c.field-meta.xml
<CustomField>
    <fullName>MVN_Effective_Months_MD__c</fullName>
    <description>Number of months for which written opt-in consent of this type is valid for the state of Maryland, which has unique consent expiration requirements.</description>
    <label>Effective Months (MD)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>