force-app/main/default/src/objects/DataUsePurpose/fields/PJN_Effective_Days_Verbal__c.field-meta.xml
<CustomField>
    <fullName>PJN_Effective_Days_Verbal__c</fullName>
    <description>Number of days for which verbal opt-in consent of this type is valid.</description>
    <label>Effective Days (Verbal)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>