force-app/main/default/src/objects/DataUsePurpose/fields/PJN_Effective_Months__c.field-meta.xml
<CustomField>
    <fullName>PJN_Effective_Months__c</fullName>
    <description>Number of months for which written opt-in consent of this type is valid.</description>
    <label>Effective Months (Written)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>