force-app/main/default/src/objects/DataUsePurpose/fields/PJN_External_Id__c.field-meta.xml
<CustomField>
    <fullName>PJN_External_Id__c</fullName>
    <description>Id used to represent record across systems and assist with data loading</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>