force-app/main/default/src/objects/DataUsePurpose/fields/PJN_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program Consent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>