force-app/main/default/src/objects/DataUsePurpose/listViews/All_DataUsePurposes.listView-meta.xml
<ListView>
    <fullName>All_DataUsePurposes</fullName>
    <columns>Name</columns>
    <columns>PJN_External_Id__c</columns>
    <columns>PJN_Effective_Months__c</columns>
    <columns>MVN_Effective_Months_MD__c</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <filterScope>Everything</filterScope>
    <label>All Data Use Purposes</label>
</ListView>